aded images eclipse and box shadow to header

--- a/src/index.html
+++ b/src/index.html
@@ -24,19 +24,19 @@
                 <div class="menu__items">
                     <ul class="menu__list">
                         <li class="menu__item">
-                            <a href="#footer" class="menu__link">Kinderkamers</a>
+                            <a href="#kinderkamers" class="menu__link">Kinderkamers</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#foo" class="menu__link">Kinderbedden</a>
+                            <a href="#kinderbedden" class="menu__link">Kinderbedden</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#" class="menu__link">Kinderkasten</a>
+                            <a href="#kinderkasten" class="menu__link">Kinderkasten</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#" class="menu__link">Kindermeubels</a>
+                            <a href="#kindermeubels" class="menu__link">Kindermeubels</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#" class="menu__link">Aanbiedingen</a>
+                            <a href="#anbiedingen" class="menu__link">Aanbiedingen</a>
                         </li>
                     </ul>
                     <div class="menu__buttons">
@@ -54,13 +54,13 @@
             </nav>
         </header>
         <main class="main">
-            <section class="welcome">
+            <section class="welcome" id="kinderkamers">
                 <h1 class="welcome__title secondary-title">Welcome to wildkidzz</h1>
                 <p class="welcome__subtitle secondary-text">Dutch children rooms since 1996</p>
             </section>
             <div class="content-wrapper">
                 <article class="products">
-                    <section class="products__product product">
+                    <section class="products__product product" id="kinderbedden">
                         <div class="product__text-wrapper">
                             <h2 class="product__title">Kinderbedden</h2>
                             <p class="product__subtitle">We produce unique designs for kinder beds – princess beds, star
@@ -88,28 +88,25 @@
                                     All our beds come with lifetime guarantee to the first buyer.
                                 </li>
                             </ul>
-                            <a class="product__link content-link">Shop kinderkamers</a>
+                            <a class="product__link content-link" href="#">Shop kinderkamers</a>
                         </div>
                         <div class="product__img-wrapper">
                             <picture class="product__img">
                                 <!-- Images for desktop (min-width: ) -->
-                                <source srcset="static/images/products/kinderbedden.webp 1x,
-                                                static/images/products/kinderbedden@2x.webp 2x"
-                                    media="(min-width: 1366px)" type="image/webp">
-                                <source srcset="static/images/products/kinderbedden.jpg 1x,
-                                                static/images/products/kinderbedden.jpg 2x"
-                                    media="(min-width: 1366px)">
-                                <!-- Images for mobile -->
-                                <source srcset="static/images/products/kinderbedden-mobile.webp 1x,
-                                                static/images/products/kinderbedden-mobile@2x.webp 2x"
+                                <source srcset="images/products/kinderbedden.webp 1x,
+                                                images/products/kinderbedden@2x.webp 2x" media="(min-width: 1200px)"
                                     type="image/webp">
-                                <img src="static/images/products/kinderbedden-mobile.jpg"
-                                    srcset="static/images/products/kinderbedden-mobile@2x.jpg 2x"
-                                    alt="Amazing Kinderbedden">
+                                <source srcset="images/products/kinderbedden.jpg 1x,
+                                                images/products/kinderbedden.jpg 2x" media="(min-width: 1200px)">
+                                <!-- Images for mobile -->
+                                <source srcset="images/products/kinderbedden-mobile.webp 1x,
+                                                images/products/kinderbedden-mobile@2x.webp 2x" type="image/webp">
+                                <img src="images/products/kinderbedden-mobile.jpg"
+                                    srcset="images/products/kinderbedden-mobile@2x.jpg 2x" alt="Amazing Kinderbedden">
                             </picture>
                         </div>
                     </section>
-                    <section class="products__product product product--reversed">
+                    <section class="products__product product product--reversed" id="kinderkasten">
                         <div class="product__text-wrapper">
                             <h2 class="product__title">Kinderclosetten</h2>
                             <p class="product__subtitle">Our closet and shelves are pretty unique.</p>
@@ -122,28 +119,26 @@
                                 <li class="product__list-item">We produce them since 1996, and they are very sturdy.
                                 </li>
                             </ul>
-                            <a class="product__link content-link">Shop kinderclosetten</a>
+                            <a class="product__link content-link" href="#">Shop kinderclosetten</a>
                         </div>
                         <div class="product__img-wrapper">
                             <picture class="product__img">
                                 <!-- Images for desktop (min-width: ) -->
-                                <source srcset="static/images/products/kinderclosetten.webp 1x,
-                                                static/images/products/kinderclosetten@2x.webp 2x"
-                                    media="(min-width: 1366px)" type="image/webp">
-                                <source srcset="static/images/products/kinderclosetten.jpg 1x,
-                                                static/images/products/kinderclosetten.jpg 2x"
-                                    media="(min-width: 1366px)">
-                                <!-- Images for mobile -->
-                                <source srcset="static/images/products/kinderclosetten-mobile.webp 1x,
-                                                static/images/products/kinderclosetten-mobile@2x.webp 2x"
+                                <source srcset="images/products/kinderclosetten.webp 1x,
+                                                images/products/kinderclosetten@2x.webp 2x" media="(min-width: 1200px)"
                                     type="image/webp">
-                                <img src="static/images/products/kinderclosetten-mobile.jpg"
-                                    srcset="static/images/products/kinderclosetten-mobile@2x.jpg 2x"
+                                <source srcset="images/products/kinderclosetten.jpg 1x,
+                                                images/products/kinderclosetten.jpg 2x" media="(min-width: 1200px)">
+                                <!-- Images for mobile -->
+                                <source srcset="images/products/kinderclosetten-mobile.webp 1x,
+                                                images/products/kinderclosetten-mobile@2x.webp 2x" type="image/webp">
+                                <img src="images/products/kinderclosetten-mobile.jpg"
+                                    srcset="images/products/kinderclosetten-mobile@2x.jpg 2x"
                                     alt="Amazing Kinderbedden">
                             </picture>
                         </div>
                     </section>
-                    <section class="products__product product product--centered">
+                    <section class="products__product product product--centered" id="kindermeubels">
                         <div class="product__text-wrapper">
                             <h2 class="product__title">Tables & chairs</h2>
                             <p class="product__subtitle">Similar, but unique text to the above</p>
@@ -151,21 +146,21 @@
                                 <li class="product__list-item">Similar, but unique text to the above</li>
                                 <li class="product__list-item">Should read as continuation of the story.</li>
                             </ul>
-                            <a class="product__link content-link">Shop tables & chairs</a>
+                            <a class="product__link content-link" href="#">Shop tables & chairs</a>
                         </div>
                         <div class="product__img-wrapper">
                             <picture class="product__img">
                                 <!-- Images for desktop (min-width: ) -->
-                                <source srcset="static/images/products/tables.webp 1x,
-                                                static/images/products/tables@2x.webp 2x" media="(min-width: 1366px)"
+                                <source srcset="images/products/tables.webp 1x,
+                                                images/products/tables@2x.webp 2x" media="(min-width: 1200px)"
                                     type="image/webp">
-                                <source srcset="static/images/products/tables.jpg 1x,
-                                                static/images/products/tables.jpg 2x" media="(min-width: 1366px)">
+                                <source srcset="images/products/tables.jpg 1x,
+                                                images/products/tables.jpg 2x" media="(min-width: 1200px)">
                                 <!-- Images for mobile -->
-                                <source srcset="static/images/products/tables-mobile.webp 1x,
-                                                static/images/products/tables-mobile@2x.webp 2x" type="image/webp">
-                                <img src="static/images/products/tables-mobile.jpg"
-                                    srcset="static/images/products/tables-mobile@2x.jpg 2x" alt="Amazing Kinderbedden">
+                                <source srcset="images/products/tables-mobile.webp 1x,
+                                                images/products/tables-mobile@2x.webp 2x" type="image/webp">
+                                <img src="images/products/tables-mobile.jpg"
+                                    srcset="images/products/tables-mobile@2x.jpg 2x" alt="Amazing Kinderbedden">
                             </picture>
                         </div>
                     </section>
@@ -233,7 +228,7 @@
             </div>
 
         </main>
-        <footer class="footer" id="footer">
+        <footer class="footer" id="anbiedingen">
             <nav class="footer__menu footer-menu">
                 <h2 class="footer__nav-title visually-hidden">Navigation in footer</h2>
                 <div class="footer-menu__item">
@@ -275,7 +270,7 @@
             <div class="footer__copyright copyright">
                 <p class="copyright__company">© 2019 - Alle rechten voorbehouden - Wildkidzz</p>
                 <p class="copyright__developers">Site developed by <a href="http://redstone.media/"
-                        class="copyright__img"><img src="./static/images/icons/redstone-logo.svg"
+                        class="copyright__img"><img src="images/icons/redstone-logo.svg"
                             alt="Redstone - open Redstone official site"></a></p>
             </div>
         </footer>
